Modified build.xml to upload to the new corefresh.aaronstephanus.com subdomain instead of a subdirectory on moveremus.com. Many CSS modifications, edits to index.html for whatever reason, lots of bug fixes in player.js, jquery.pulse.js.

--- a/BeatsPlayerTest/build.xml
+++ b/BeatsPlayerTest/build.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project name="aarons-soundcloud-player" basedir=".">
-    <property name="REMOTE_BASE" value="root@aaronstephanus.com:/var/www/vhosts/moveremus.com/httpdocs/beatsmusic/"/>
+    <property name="REMOTE_BASE" value="root@aaronstephanus.com:/var/www/vhosts/corefresh.aaronstephanus.com/httpdocs/"/>
 
   <target name="css">
   	<echo message="Uploading CSS files to the remote host."/>
