Placed the profile, and player pages in external files to be loaded by URL. Added many event handlers (swipe back/forth, back button, download button stuff. All kinds of enhancements, but things are screwed up with the templates not loading. I think I know why. It could be because of the dataUrl set in the call to $.mobile.changePage(). It could be screwing with the Angular router. This just dawned on me...

--- a/BeatsPlayerTest/.settings/org.eclipse.core.resources.prefs
+++ b/BeatsPlayerTest/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//js/aarons-player/pages/profile.html=UTF-8
+encoding//js/aarons-player/tpl/profile.html=UTF-8
 encoding/<project>=UTF-8
